--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
+    ${libs.swing-layout.classpath}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.appframework-1.0.3.jar}:\
     ${file.reference.gdata-base-1.0.jar}:\
@@ -69,8 +70,7 @@ javac.classpath=\
     ${file.reference.metadata-extractor-2.4.0-beta-1.jar}:\
     ${file.reference.PDFRenderer.jar}:\
     ${file.reference.swing-layout-1.0.4.jar}:\
-    ${file.reference.swing-worker-1.1.jar}:\
-    ${libs.swing-layout.classpath}
+    ${file.reference.swing-worker-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
